# GLM-4

./: .gitignore  LICENSE  README.md  README_20240605.md  README_en.md  README_ja.md  README_zh.md  README_zh_240605.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature-request.yaml
basic_demo/: README.md  README_en.md  client_call_fastapi_4v_9b.py  fastapi_call_4v_9b.py  glm4v_server.py  glm_server.py  openai_api_request.py  openai_api_server.py  openai_api_server_hf.py  requirements.txt  trans_batch_demo.py  trans_cli_demo.py  trans_cli_vision_demo.py  trans_cli_vision_gradio_demo.py  trans_stress_test.py  trans_web_demo.py  trans_web_vision_demo.py  vllm_cli_demo.py  vllm_cli_lora_demo.py  vllm_cli_vision_demo.py
candle_demo/: Cargo.toml  README.org
candle_demo/cli/: Cargo.toml
candle_demo/cli/src/: main.rs
candle_demo/glm4/: Cargo.toml
candle_demo/glm4/src/: args.rs  glm4.rs  lib.rs
composite_demo/: .gitignore  README.md  README_en.md  requirements.txt
composite_demo/browser/: .gitignore  package-lock.json  package.json
composite_demo/browser/src/: browser.ts  (+4 more)
composite_demo/src/: client.py  conversation.py  main.py  utils.py
demo/composite_demo/: README.md  README_en.md  requirements.txt
finetune/: README.md  README_zh.md  finetune.py  finetune_vision.py  requirements.txt
finetune/configs/: ds_zero_2.json  lora.yaml  sft.yaml
finetune_demo/: README.md  README_en.md  finetune.py  finetune_vision.py  inference.py  requirements.txt
finetune_demo/configs/: ds_zero_3.json  lora.yaml  ptuning_v2.yaml  sft.yaml
inference/: README.md  README_zh.md  glm4v_api_request.py  glm4v_server.py  glm_server.py  openai_api_request.py  openai_api_server.py  requirements.txt  trans_batch_demo.py  trans_cli_demo.py  trans_cli_vision_demo.py  trans_stress_test.py  trans_web_demo.py  trans_web_vision_demo.py  vllm_cli_demo.py  vllm_cli_vision_demo.py
intel_device_demo/itrex/: README.md  README_en.md  itrex_cli_demo.py
intel_device_demo/openvino/: README.md  README_en.md  convert.py  openvino_cli_demo.py  requirements.txt
resources/: WECHAT.md
(+358 files in other folders)
